--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@wayline/config",
   "private": true,
-  "version": "1.1.2",
+  "version": "1.3.7",
   "description": "Universal configuration data for Wayline",
   "main": "module.js",
-  "scripts": {},
+  "scripts": {
+    "build": "node build.js",
+    "precommit": "node build.js"
+  },
   "keywords": [
     "wayline"
   ],
