Add verbose MDT API (useful for extra bus data)

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 [basefeeds]
 MiamiDadeTransit = 'https://www.miamidade.gov/transit/WebServices/'
+MiamiDadeTransitVerbose = 'https://www.miamidade.gov/transit/mobile/xml/'
 Brightline = 'https://www.gobrightline.com/api/'
 BrightlineSystem = 'https://luxapi.verbinteractive.com/api/'
 TSOMobile = 'https://rest.tsoapi.com/'
