--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   ],
   "author": "Cyberscape <info@cyberscape.co>",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
+    "axios": "^0.18.0",
     "toml": "^3.0.0"
   }
 }
