Update config to include gtfs urls

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,10 @@ TSOMobile = 'https://rest.tsoapi.com/'
 CoralGablesETA = 'http://cgpublic.etaspot.net/service.php'
 TriRailETA = 'http://trirailpublic.etaspot.net/service.php'
 
+[GTFSPlaces]
+MiamiDadeTransit = 'https://www.miamidade.gov/transit/googletransit/current/google_transit.zip'
+SFRTATriRail = 'https://www.tri-rail.com/GTDF/Current/google_transit.zip'
+
 [MiamiDadeTransitRouteMap]
 Metrorail = '21024'
 MetromoverInnerLoop = '14457'
